Eventos, Storage y JSON

--- a/index.html
+++ b/index.html
@@ -65,9 +65,16 @@
       </button>
     </div>
   </header>
-
+  
+  <div>
+    <select name="lista" id="lista">
+    </select>
+    <button id="ingresarProd">Ingresar Producto</button>
+    <button id="finalizar">Finalizar Compra</button>
+  </div>
+ 
   <section class="container-fluid mb-5">
-    <h1 id="destacados" class="h3 text-center mt-3 mb-4">Productos destacados</h1>
+    <h1 id="welcome" class="h3 text-center mt-3 mb-4">Bienvenido/a </h1>
     <div class="row justify-content-around">
       <div class="card" style="width: 18rem">
         <img src="./images/productos/iphone.jpg" class="card-img-top" alt="Imagen de Iphone 13 Pro" />
