--- a/pages/productos/lenovogaming.html
+++ b/pages/productos/lenovogaming.html
@@ -36,79 +36,10 @@
         </div>
     </nav>
 
-
-    <div class="container-fluid">
-        <div class="row mb-5">
-            <div class="col-md-7">
-                <img src="../../images/productos/reddragon k630.jpg" class="img-fluid" width="700px">
-                <h1 id="titleProd">REDRAGON K630</h1>
-            </div>
-            <div id="infProduc" class="col-md-5 mt-5">
-                <div class="form-group row mt-5">
-                    <label class="col-sm-3 col-md-3">Precio:</label>
-                    <div class="col-sm-8 col-md-9">
-                        <span>$ARS 6.500,00</span>
-                    </div>
-                </div>
-                <div class="row">
-                    <label class="col-sm-3 col-md-3">Cantidad:</label>
-                    <div class="col-sm-8 col-md-9">
-                        <input type="number" class="form-control" maxlength="1" valuea="1">
-                    </div>
-                </div>
-                <div class="form-group row hidden">
-                    <label class="col-sm-3 col-md-3">Disponible:</label>
-                    <div class="col-sm-8 col-md-9">
-                        <span>En Stock</span>
-                        <p>Este producto esta disponible tanto en locales como comprando online.</p>
-                        <a href="../contacto.html" class="btn btn-secondary btn-sm" title="Contacto">Contacto</a>
-                        <a href="../../index.html" class="btn btn-link btn-sm" title="←  
-              o Continua a Productos Destacados">←
-                            o Continua a Productos Destacados</a>
-                    </div>
-                </div>
-                <div class="form-group row mt-3">
-                    <label class="col-sm-3 col-md-3 form-control-label"></label>
-                    <div class="col-sm-8 col-sm-offset-3 col-md-9 col-md-offset-3">
-                        <input type="submit" class="btn btn-primary" value="Añadir al Carrito">
-                        <a href="../../index.html" class="btn btn-link btn-sm" title="Continua a Productos Destacados">←
-                            o
-                            Continua a Productos Destacados</a>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-3 col-md-3 form-control-label">Descripción:</label>
-                    <div class="col-sm-8 col-md-9 descripcion">
-                        <p>TIPO DE TECLADO: mecánico.</p>
-                        <p>TIPO DE SWITCHES: Redragon Brown o Blue</p>
-                        <p>TECLAS MULTIMEDIA: no.</p>
-                        <p>TECLAS MACRO DEDICADAS: no.</p>
-                        <p>BLOQUEO DE TECLA WINDOWS: sí.</p>
-                        <p>TAMAÑO: compacto 60%.</p>
-                        <p>REPOSAMUÑECAS: no.</p>
-                        <p>RETROILUMINADO: sí, RGB Chroma.</p>
-                        <p>CABLE: USB-C desmontable.</p>
-                        <p>MATRIZ: 61 teclas full rollover.</p>
-                        <p>CONSTRUCCIÓN: plástico ABS reforzado.</p>
-                        <p>ANTI SALPICADURAS: sí.</p>
-                        <p>DISTRIBUCIÓN: inglés</p>
-                        <p>PESO: 0,57 kg.</p>
-                        <p>DIMENSIONES: 29,17 x 10,17 x 3,6 cm.</p>
-                        <p>SOFTWARE: sí (Solo versión RGB).</p>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-3 col-md-3 form-control-label">Detalles:</label>
-                    <div class="col-sm-9 col-md-9">
-                        <p>Marca: Redragon</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="stockNo" class="mt-5">
+        <h1>Lo siento :( este producto no esta disponible</h1>
     </div>
-
-
-
+    
 
 
 
