--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -36,24 +36,25 @@
     </div>
   </nav>
 
+
   <section id="form" class="container-fluid mb-4">
-    <h1 class="h3">Contacto</h1>
+    <h1 id="titulo" class="h3">Bienvenido</h1>
     <div class="row">
       <article class="col-md-8">
-        <form class="row g-3">
+        <form id="formulario" class="row g-3">
           <div class="col-md-6">
-            <label for="inputEmail4" class="form-label">Email</label>
-            <input type="email" class="form-control" id="inputEmail4">
+            <label for="input" class="form-label">Nombre</label>
+            <input type="text" class="form-control" id="nombre" placeholder="Ingresa tu nombre">
           </div>
           <div class="col-md-6">
-            <label for="inputPassword4" class="form-label">Contraseña:</label>
-            <input type="password" class="form-control" id="inputPassword4">
+            <label for="input" class="form-label">Apellido</label>
+            <input type="text" class="form-control" id="apellido" placeholder="Ingresa tu apellido">
           </div>
           <div class="col-12">
-            <label for="inputAddress" class="form-label">Numero de Telefono</label>
-            <input type="text" class="form-control" id="inputAddress" placeholder="113452...">
+            <label for="input" class="form-label">Correo</label>
+            <input type="text" class="form-control" id="correo" placeholder="Ingresar correo electronico">
           </div>
-          <div class="col-12">
+          <!--<div class="col-12">
             <label for="inputAddress2" class="form-label">Direccion</label>
             <input type="text" class="form-control" id="inputAddress2" placeholder="Casa, apartamento, estudio o piso">
           </div>
@@ -69,8 +70,8 @@
               <option>Mendoza</option>
               <option>Cordoba</option>
             </select>
-          </div>
-
+          </div> -->
+  
           <div class="col-12">
             <div class="form-check">
               <input class="form-check-input" type="checkbox" id="gridCheck">
@@ -78,13 +79,14 @@
                 Deseo recibir ofertas y promociones
               </label>
             </div>
-          </div>
+          </div> 
           <div class="col-12">
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="submit" class="btn btn-primary">Ingresar</button>
           </div>
         </form>
       </article>
-  </section>
+  </section> 
+
 
   <div class="relapost">
     <div class="row">
@@ -106,9 +108,6 @@
     </div>
   </div>
 
-
-
-
   <footer class="footer">
     <p><a href="../pages/contacto.html">Contacto</a>
       <p>Copyright 2022 / Todos los derechos reservados TiendaCell.Com
@@ -128,6 +127,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
+    <script src="/js/contacto.js"></script>
 </body>
 
 </html>
