--- a/pages/productos/reddragonk630.html
+++ b/pages/productos/reddragonk630.html
@@ -47,13 +47,7 @@
                 <div class="form-group row mt-5">
                     <label class="col-sm-3 col-md-3">Precio:</label>
                     <div class="col-sm-8 col-md-9">
-                        <span>$ARS 6.500,00</span>
-                    </div>
-                </div>
-                <div class="row">
-                    <label class="col-sm-3 col-md-3">Cantidad:</label>
-                    <div class="col-sm-8 col-md-9">
-                        <input type="number" class="form-control" maxlength="1" valuea="1">
+                        <span><strong>$80</strong></span>
                     </div>
                 </div>
                 <div class="form-group row hidden">
