--- a/pages/productos/redminote10pro.html
+++ b/pages/productos/redminote10pro.html
@@ -47,15 +47,10 @@
                 <div class="form-group row mt-5">
                     <label class="col-sm-3 col-md-3">Precio:</label>
                     <div class="col-sm-8 col-md-9">
-                        <span>$ARS 6.500,00</span>
+                        <span><strong>$400</strong></span>
                     </div>
                 </div>
-                <div class="row">
-                    <label class="col-sm-3 col-md-3">Cantidad:</label>
-                    <div class="col-sm-8 col-md-9">
-                        <input type="number" class="form-control" maxlength="1" valuea="1">
-                    </div>
-                </div>
+               
                 <div class="form-group row hidden">
                     <label class="col-sm-3 col-md-3">Disponible:</label>
                     <div class="col-sm-8 col-md-9">
