--- a/index.html
+++ b/index.html
@@ -66,17 +66,16 @@
     </div>
   </header>
   
-  <div>
-    <select name="lista" id="lista">
-    </select>
-    <button id="ingresarProd">Ingresar Producto</button>
-    <button id="finalizar">Finalizar Compra</button>
-  </div>
- 
-  <section class="container-fluid mb-5">
-    <h1 id="welcome" class="h3 text-center mt-3 mb-4">Bienvenido/a </h1>
+
+  <button id="finalizar" class="btn btn-primary">Finalizar Compra</button>
+<div class="row justify-content-around" id="divProductos">
+  
+
+</div>
+<!--   <section class="container-fluid mb-5">
+    <h1 class="h3 text-center mt-3 mb-4">Bienvenido/a </h1>
     <div class="row justify-content-around">
-      <div class="card" style="width: 18rem">
+      <div id="iphone13" class="card" style="width: 18rem">
         <img src="./images/productos/iphone.jpg" class="card-img-top" alt="Imagen de Iphone 13 Pro" />
         <div class="card-body">
           <h4 class="card-title text-center">Iphone 13 Pro</h4>
@@ -123,7 +122,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 
 
@@ -165,7 +164,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
-  <script src="./js/main.js"></script>
+  <script src="./main.js"></script>
 </body>
 
 </html>
