--- a/pages/productos/iphone13pro.html
+++ b/pages/productos/iphone13pro.html
@@ -40,7 +40,7 @@
   <div class="container-fluid">
     <div class="row mb-5">
       <div class="col-md-7">
-        <img src="../../images/productos/iphone.jpg" class="img-fluid" width="700px">
+        <img src="../../images/productos/prod/iphone.jpg" class="img-fluid mt-5" width="700px">
         <h1 id="titleProd">IPHONE 13 PRO</h1>
       </div>
       <div id="infProduc" class="col-md-5 mt-5">
@@ -65,7 +65,7 @@
         <div class="form-group row mt-3">
           <label class="col-sm-3 col-md-3 form-control-label"></label>
           <div class="col-sm-8 col-sm-offset-3 col-md-9 col-md-offset-3">
-            <input type="submit" class="btn btn-primary" value="Añadir al Carrito">
+            <input type="submit" class="sumarCar btn btn-primary" value="Añadir al Carrito">
             <a href="../../index.html" class="btn btn-link btn-sm" title="Continua a Productos Destacados">← o
               Continua a Productos Destacados</a>
           </div>
@@ -124,6 +124,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
+
+  <script src="/js/productos/iphone.js"></script>
 </body>
 
 </html>
