--- a/pages/productos/reddragonk630.html
+++ b/pages/productos/reddragonk630.html
@@ -40,7 +40,7 @@
     <div class="container-fluid">
         <div class="row mb-5">
             <div class="col-md-7">
-                <img src="../../images/productos/reddragon k630.jpg" class="img-fluid" width="700px">
+                <img src="../../images/productos/reddragonk.jpg" class="img-fluid" width="700px">
                 <h1 id="titleProd">REDRAGON K630</h1>
             </div>
             <div id="infProduc" class="col-md-5 mt-5">
