Librerias Luxon, Sweet Alert y Toastify en index.html y contacto.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
 <body>
@@ -65,14 +66,14 @@
       </button>
     </div>
   </header>
-  
+
 
   <button id="finalizar" class="btn btn-primary">Finalizar Compra</button>
-<div class="row justify-content-around" id="divProductos">
-  
+  <div class="row justify-content-around" id="divProductos">
 
-</div>
-<!--   <section class="container-fluid mb-5">
+
+  </div>
+  <!--   <section class="container-fluid mb-5">
     <h1 class="h3 text-center mt-3 mb-4">Bienvenido/a </h1>
     <div class="row justify-content-around">
       <div id="iphone13" class="card" style="width: 18rem">
@@ -164,9 +165,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/luxon@3.1.0/build/global/luxon.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="./main.js"></script> 
-  
+  <script src="./main.js"></script>
+
 </body>
 
 </html>
