--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
 <body>
@@ -38,7 +39,7 @@
 
 
   <section id="form" class="container-fluid mb-4">
-    <h1 id="titulo" class="h3">Bienvenido</h1>
+    <h1 id="titulo" class="h3">Bienvenido/a</h1>
     <div class="row">
       <article class="col-md-8">
         <form id="formulario" class="row g-3">
@@ -81,7 +82,7 @@
             </div>
           </div> 
           <div class="col-12">
-            <button type="submit" class="btn btn-primary">Ingresar</button>
+            <button id="confDatos" type="submit" class="btn btn-primary">Ingresar</button>
           </div>
         </form>
       </article>
@@ -127,7 +128,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
-    <script src="./productos/js/contacto.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/js/contacto.js"></script>
 </body>
 
 </html>
