--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -130,7 +130,7 @@
     crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/js/contacto.js"></script>
+    <script src="./../contacto.js"></script>
 </body>
 
 </html>
