--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 
 
   <button id="finalizar" class="btn btn-primary">Finalizar Compra</button>
-  <div class="row justify-content-around" id="divProductos">
+    
+  <div class="row justify-content-around" id="divProd">
 
 
   </div>
