Uso de JSON y modificaciones en productos

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
     </div>
   </header>
 
+  <select name="lista" id="lista"></select>
+  <button id="filtrar" class="btn btn-success">Filtrar</button>
 
-  <button id="finalizar" class="btn btn-primary">Finalizar Compra</button>
-    
   <div class="row justify-content-around" id="divProd">
 
-
   </div>
+  <button id="finalizar" class="btn btn-primary">Finalizar Compra</button>
   <!--   <section class="container-fluid mb-5">
     <h1 class="h3 text-center mt-3 mb-4">Bienvenido/a </h1>
     <div class="row justify-content-around">
